fix for hero text on mobile

--- a/source/scss/module/_blocks.scss
+++ b/source/scss/module/_blocks.scss
@@ -7,7 +7,7 @@
   }
 }
 .hero {
-  overflow: hidden;
+  // overflow: hidden;
   z-index: 1;
 
   .home & {
